--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-   "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "daisyui": "^5.0.35",
     "eslint": "^9",
-    "eslint-config-next": "15.3.2",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-next": "^15.3.2",
+    "tailwindcss": "^4"
   }
 }
